# tator

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
examples/: CMakeLists.txt
examples/example1/: CMakeLists.txt  example1.cpp
examples/example1/Resources/shaders/: default_fragment.glsl  default_vertex.glsl
examples/example2/: CMakeLists.txt  example2.cpp
examples/example2/Resources/shaders/: default_fragment.glsl  default_vertex.glsl
include/tator/core/: Component.hpp  Entity.hpp  EntityManager.hpp  TatorEngine.hpp  TypeId.hpp
include/tator/graphics/: Camera.hpp  IRenderable.hpp  Mesh.hpp  OpenGLRenderer.hpp  PrimitiveFactory.hpp  Renderable.hpp  Renderer.hpp  RenderingEngine.hpp  ShaderProgram.hpp  StandardMesh.hpp  gl.hpp  shader.hpp
include/tator/graphics/data/: AbstractBufferedVertexDataDispatcher.hpp  BufferedVertexData.hpp  IVertexData.hpp  VertexAttribute.hpp  VertexAttributeInfo.hpp  VertexData.hpp  VertexDataHint.hpp
include/tator/graphics/impl/opengl/: OpenGLMaterial.hpp  OpenGLMaterialSettingDispatcher.hpp  OpenGLRenderingEngine.hpp  OpenGlMaterialFactory.hpp
include/tator/graphics/impl/opengl/detail/: OpenGLObject.hpp  OpenGLObjectManager.hpp  Shader.hpp
include/tator/graphics/material/: AbstractMaterialFactory.hpp  AbstractMaterialSettingDispatcher.hpp  BaseMaterialSetting.hpp  Material.hpp  NumericMaterialSetting.hpp
include/tator/graphics/view/: Camera.hpp
include/tator/scripting/: PythonEngine.hpp  ScriptEngine.hpp
include/tator/system/: Core.hpp  TatorException.hpp  Window.hpp
src/: test1.cpp
src/graphics/: Camera.cpp  Mesh.cpp  OpenGLRenderer.cpp  Renderable.cpp  ShaderProgram.cpp  StandardMesh.cpp  gl.cpp  shader.cpp
src/scripting/: PythonEngine.cpp
src/system/: Core.cpp
